--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -303,14 +303,13 @@
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
     "maxWorkers": 3000,
-    "maxNewWorkersPerCycle":20,
-    "nQueueLimitWorkerRatio": 200,
+    "maxNewWorkersPerCycle":50,
     "nQueueLimitWorkerMin":3,
-    "nQueueLimitWorkerMax": 100,
+    "nQueueLimitWorkerMax": 200,
     "nQueueLimitJobMax":10000,
     "nQueueLimitJobMin":1200,
     "nQueueLimitJob": 10000,
-    "nQueueLimitWorker":50,
+    "nQueueLimitWorker":100000,
 
     "submitter": {
           "ceQueueName": "rubin",
@@ -326,15 +325,14 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
-    "maxWorkers": 1000,
+    "maxWorkers": 1500,
     "maxNewWorkersPerCycle":20,
-    "nQueueLimitWorkerRatio": 500,
     "nQueueLimitWorkerMin":3,
-    "nQueueLimitWorkerMax": 40,
+    "nQueueLimitWorkerMax": 100,
     "nQueueLimitJobMax":10000,
     "nQueueLimitJobMin":1200,
     "nQueueLimitJob": 10000,
-    "nQueueLimitWorker":50,
+    "nQueueLimitWorker":10000,
 
     "submitter": {
           "ceQueueName": "rubin",
@@ -352,13 +350,12 @@
     "templateQueueName": "production.pull",
     "maxWorkers": 700,
     "maxNewWorkersPerCycle":20,
-    "nQueueLimitWorkerRatio": 500,
     "nQueueLimitWorkerMin":3,
-    "nQueueLimitWorkerMax": 40,
+    "nQueueLimitWorkerMax": 60,
     "nQueueLimitJobMax":10000,
     "nQueueLimitJobMin":1200,
     "nQueueLimitJob": 10000,
-    "nQueueLimitWorker":50,
+    "nQueueLimitWorker":10000,
 
     "submitter": {
           "ceQueueName": "rubin_himem",
@@ -374,15 +371,14 @@
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
-    "maxWorkers": 50,
+    "maxWorkers": 100,
     "maxNewWorkersPerCycle":20,
-    "nQueueLimitWorkerRatio": 500,
     "nQueueLimitWorkerMin":3,
     "nQueueLimitWorkerMax": 40,
     "nQueueLimitJobMax":10000,
-    "nQueueLimitJobMin":1200,
+    "nQueueLimitJobMin":600,
     "nQueueLimitJob": 10000,
-    "nQueueLimitWorker":50,
+    "nQueueLimitWorker":10000,
 
     "submitter": {
           "ceQueueName": "rubin_extra_himem",
@@ -400,13 +396,12 @@
     "templateQueueName": "production.push",
     "maxWorkers": 50,
     "maxNewWorkersPerCycle":20,
-    "nQueueLimitWorkerRatio": 500,
     "nQueueLimitWorkerMin":3,
-    "nQueueLimitWorkerMax": 40,
+    "nQueueLimitWorkerMax": 100,
     "nQueueLimitJobMax":10000,
     "nQueueLimitJobMin":1200,
     "nQueueLimitJob": 10000,
-    "nQueueLimitWorker":50,
+    "nQueueLimitWorker":10000,
 
     "submitter": {
           "ceQueueName": "rubin_merge",
@@ -418,7 +413,7 @@
   },
 
   "SLAC_Rubin_SDF": {
-    "queueStatus": "online",
+    "queueStatus": "offline",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.pull",
@@ -442,7 +437,7 @@
   },
 
   "SLAC_Rubin_SDF_Big": {
-    "queueStatus": "online",
+    "queueStatus": "offline",
     "prodSourceLabel": "managed",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production.push",
@@ -470,12 +465,12 @@
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.push",
-      "maxWorkers": 20,
-      "nQueueLimitWorkerRatio": 500,
-      "nQueueLimitWorkerMin":100,
-      "nQueueLimitWorkerMax": 500,
+      "maxWorkers": 3000,
+      "maxNewWorkersPerCycle":20,
+      "nQueueLimitWorkerMin":3,
+      "nQueueLimitWorkerMax": 100,
       "nQueueLimitJobMax":10000,
-      "nQueueLimitJobMin":100,
+      "nQueueLimitJobMin":1000,
       "nQueueLimitJob": 10000,
       "nQueueLimitWorker":10000,
 
@@ -493,10 +488,10 @@
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.push",
-      "maxWorkers": 20,
-      "nQueueLimitWorkerRatio": 500,
-      "nQueueLimitWorkerMin":100,
-      "nQueueLimitWorkerMax": 500,
+      "maxWorkers": 1000,
+      "maxNewWorkersPerCycle":20,
+      "nQueueLimitWorkerMin":3,
+      "nQueueLimitWorkerMax": 100,
       "nQueueLimitJobMax":10000,
       "nQueueLimitJobMin":100,
       "nQueueLimitJob": 10000,
