not delete condor logs

--- a/helm/harvester/charts/harvester/templates/statefulset.yaml
+++ b/helm/harvester/charts/harvester/templates/statefulset.yaml
@@ -67,6 +67,7 @@ spec:
   storageClassName: {{ .Values.persistentvolume.class }}
   accessModes:
     - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
   resources:
     requests:
       storage: {{ .Values.persistentvolume.size }}
