--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -3,7 +3,7 @@
   "production.pull": {
     "isTemplateQueue": true,
     "prodSourceLabel": "managed",
-    "nQueueLimitWorkerRatio": 50,
+    "nQueueLimitWorkerRatio": 5000,
     "nQueueLimitWorkerMin": 100,
     "nQueueLimitWorkerMax": 10000,
     "maxWorkers": 10,
@@ -68,7 +68,7 @@
     "isTemplateQueue": true,
     "prodSourceLabel": "managed",
     "nQueueLimitWorker": 10000,
-    "nQueueLimitJobRatio":40,
+    "nQueueLimitJobRatio":5000,
     "nQueueLimitJobMax": 1000,
     "nQueueLimitJobMin":3,
     "maxWorkers": 10,
@@ -136,7 +136,6 @@
       "prodSourceLabel":"managed",
       "prodSourceLabelRandomWeightsPermille": {"ptest":10, "rc_test":10, "rc_test2":10, "rc_alrb":10},
       "maxWorkers": 10000,
-      "nQueueLimitWorkerRatio": 40,
       "nQueueLimitWorkerMin": 1,
       "nQueueLimitWorkerMax": 100,
       "nQueueLimitWorker":50,
@@ -209,7 +208,6 @@
       "nQueueLimitJobMax":10000,
       "nQueueLimitJob": 10000,
       "nQueueLimitWorker":10000,
-      "nQueueLimitWorkerRatio": 50,
       "maxWorkers":50000,
       "maxNewWorkersPerCycle":500,
       "mapType":"OneToOne",
@@ -279,12 +277,11 @@
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.push",
       "maxWorkers": 900,
-      "maxNewWorkersPerCycle":10,
-      "nQueueLimitWorkerRatio": 500,
-      "nQueueLimitWorkerMin":100,
-      "nQueueLimitWorkerMax": 500,
+      "maxNewWorkersPerCycle":20,
+      "nQueueLimitWorkerMin":3,
+      "nQueueLimitWorkerMax": 100,
       "nQueueLimitJobMax":10000,
-      "nQueueLimitJobMin":100,
+      "nQueueLimitJobMin":1000,
       "nQueueLimitJob": 10000,
       "nQueueLimitWorker":10000,
 
@@ -464,7 +461,7 @@
       "queueStatus": "online",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
-      "templateQueueName": "production.push",
+      "templateQueueName": "production.pull",
       "maxWorkers": 3000,
       "maxNewWorkersPerCycle":20,
       "nQueueLimitWorkerMin":3,
@@ -487,7 +484,7 @@
       "queueStatus": "online",
       "prodSourceLabel": "managed",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
-      "templateQueueName": "production.push",
+      "templateQueueName": "production.pull",
       "maxWorkers": 1000,
       "maxNewWorkersPerCycle":20,
       "nQueueLimitWorkerMin":3,
@@ -507,12 +504,11 @@
   },
 
   "QMUL_TEST": {
-      "queueStatus": "online",
+      "queueStatus": "offline",
       "prodSourceLabel": "test",
       "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
       "templateQueueName": "production.push",
       "maxWorkers": 1,
-      "nQueueLimitWorkerRatio": 500,
       "nQueueLimitWorkerMin":100,
       "nQueueLimitWorkerMax": 500,
       "nQueueLimitJobMax":10000,
@@ -527,7 +523,7 @@
   },
 
   "DOMA_LSST_GOOGLE_TEST_HIMEM": {
-    "queueStatus": "online",
+    "queueStatus": "offline",
     "maxWorkers": 4050,
     "nQueueLimitWorkerMin": 1,
     "nQueueLimitWorkerMax": 50,
@@ -543,7 +539,7 @@
   },
 
   "DOMA_LSST_GOOGLE_TEST_HIMEM_NON_PREEMPT": {
-    "queueStatus": "online",
+    "queueStatus": "offline",
     "maxWorkers": 2000,
     "nQueueLimitJobMax":2000,
     "nQueueLimitJob": 500,
@@ -565,7 +561,7 @@
     "maxWorkers": 200,
     "maxNewWorkersPerCycle":1,
     "nQueueLimitWorkerMax": 1,
-    "queueStatus": "online",
+    "queueStatus": "offline",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production_k8s.pull",
     "common": {
@@ -581,7 +577,7 @@
     "nQueueLimitWorkerMin": 1,
     "nQueueLimitWorkerMax": 2,
     "maxNewWorkersPerCycle":1,
-    "queueStatus": "online",
+    "queueStatus": "offline",
     "mapType":"OneToOne",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production_k8s.pull",
@@ -593,12 +589,12 @@
   },
 
   "DOMA_LSST_GOOGLE_MERGE": {
-    "queueStatus": "online",
+    "queueStatus": "offline",
     "maxWorkers": 20,
     "nQueueLimitWorkerMin": 1,
     "nQueueLimitWorkerMax": 5,
     "maxNewWorkersPerCycle":5,
-    "queueStatus": "online",
+    "queueStatus": "offline",
     "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
     "templateQueueName": "production_k8s.pull",
     "common": {
@@ -609,8 +605,9 @@
   },
 
   "DOMA_LSST_GOOGLE_TEST": {
-  "queueStatus": "online",
+  "queueStatus": "offline",
   "nQueueLimitWorker":5000,
+  "nQueueLimitWorkerMin":3,
   "maxNewWorkersPerCycle":200,
   "nQueueLimitWorkerMax": 200,
   "prodSourceLabelRandomWeightsPermille": {"rc_test":0, "rc_test2":0, "rc_alrb":0},
