--- a/helm/harvester/charts/harvester/templates/statefulset.yaml
+++ b/helm/harvester/charts/harvester/templates/statefulset.yaml
@@ -139,6 +139,7 @@ spec:
               {{- else }}
               chmod -R 777 /var/log/panda;
               chmod -R 777 /var/log/condor_logs;
+              ln -s /var/log/condor_logs /var/www/html/;
               runuser -u atlpan -g zp -- /opt/harvester/etc/rc.d/init.d/run-harvester-services;
               {{- end }}
               sleep infinity & wait
