rucio.cfg in bigmon

--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -18,6 +18,7 @@ stringData:
   BIGMON_SECRET_KEY: "{{ .Values.bigmon.secretKey }}"
   BIGMON_VO: "{{ .Values.bigmon.vo }}"
   BIGMON_DEPLOYMENT: "{{ .Values.bigmon.deployment | default "POSTGRES" }}"
+  PRMON_LOGS_DIRECTIO_LOCATION: "{{ .Values.bigmon.prmonLocation }}"
   {{- if .Values.bigmon.debugMode }}
   BIGMON_DEBUG: "True"
   {{- else }}
@@ -49,6 +50,9 @@ stringData:
   IDDS_DB_SCHEMA: "{{ .Values.idds.database.schema}}"
 
   IDDS_HOST: "{{ include "idds_ref" . }}-rest"
+  IDDS_PORT: "{{ .Values.idds.restPort }}"
+  IDDS_AUTH_ID_TOKEN: "{{ .Values.auth.authIdToken }}"
+  IDDS_AUTH_VO: "{{ .Values.auth.authVO }}"
 
   # Rucio
   RUCIO_SERVER_HOST: "{{ .Values.rucio.rucioHost }}"
@@ -56,6 +60,7 @@ stringData:
   RUCIO_ACCOUNT: "{{ .Values.rucio.account }}"
   RUCIO_USERNAME: "{{ .Values.rucio.username }}"
   RUCIO_PASSWORD: "{{ .Values.rucio.password }}"
+  RUCIO_CONFIG: "/opt/bigmon/etc/rucio.cfg"
 
   # CRIC
   {{- if .Values.cric.real }}
