--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -128,6 +128,10 @@ bigmon:
         secret: "FIXME"
         basePath: "FIXME"
 
+  # set prmonLocation: "" to use rucio download to fetch prmon files
+  prmonLocation: "https://storage.googleapis.com/drp-us-central1-logging/logs/{queue_name}/PandaJob_{panda_id}"
+
+
 iam:
   enabled: true
 
