--- a/helm/bigmon/charts/main/templates/statefulset.yaml
+++ b/helm/bigmon/charts/main/templates/statefulset.yaml
@@ -78,6 +78,8 @@ spec:
           args:
             - cp /data/bigmon/configmap/* /data/bigmon/config/ ;
               python /data/bigmon/config/process_template.py ;
+              mv idds.cfg /opt/bigmon/etc/idds/;
+              mv rucio.cfg /opt/bigmon/etc/;
               {{- if .Values.autoStart }}
               until /usr/pgsql-*/bin/pg_isready -h ${PANDA_DB_HOST} -p ${PANDA_DB_PORT}; do echo waiting for database; sleep 2; done;
               chmod 777 /data/bigmon/logs;
