--- a/helm/panda/charts/server/templates/statefulset.yaml
+++ b/helm/panda/charts/server/templates/statefulset.yaml
@@ -17,6 +17,7 @@ spec:
     path: {{ .Values.persistentvolume.path }}
 ---
 {{- end }}
+{{- if or .Values.persistentvolume.create .Values.sharedCache }}
 # pv claim
 kind: PersistentVolumeClaim
 apiVersion: v1
@@ -37,6 +38,7 @@ spec:
       {{- include "server.selectorLabels" . | nindent 6 }}
   {{- end }}
 ---
+{{- end }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -109,8 +111,8 @@ spec:
                mountPath: /opt/panda/etc/cert
              - name: {{ include "server.fullname" . }}-cric-jsons-volume
                mountPath: /var/cric
-             {{- if not .Values.persistentvolume.create }}
-             - name: { { include "server.fullname" . } }-cache
+             {{- if and .Values.sharedCache not .Values.persistentvolume.create }}
+             - name: {{ include "server.fullname" . }}-cache
                mountPath: /var/log/panda/pandacache
              {{- end }}
           envFrom:
@@ -157,14 +159,16 @@ spec:
           secret:
               secretName: {{ .Values.global.secret }}-cric-jsons
               optional: true
+        {{- if and .Values.sharedCache not .Values.persistentvolume.create }}
+        - name: {{ include "server.fullname" . }}-cache
+          persistentVolumeClaim:
+            claimName: { { include "server.fullname" . }}
+        {{- end }}
   {{- if .Values.persistentvolume.create }}
         - name: {{ include "server.fullname" . }}-logs
           persistentVolumeClaim:
             claimName: {{ include "server.fullname" . }}
   {{- else }}
-        - name: {{ include "server.fullname" . }}-cache
-          persistentVolumeClaim:
-            claimName: {{ include "server.fullname" . }}
   volumeClaimTemplates:
     - metadata:
         name: {{ include "server.fullname" . }}-logs
