--- a/helm/panda/values/values-sphenix.yaml
+++ b/helm/panda/values/values-sphenix.yaml
@@ -21,6 +21,8 @@ server:
   noRoot: true
   hostName: "sphenix-pandaserver.apps.rcf.bnl.gov"
 
+  sharedCache: true
+
 
 postgres:
   persistentvolume:
