--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -18,7 +18,7 @@ stringData:
   PANDA_AUTH_VO: {{ .Values.auth.authVO }}
 
   {{- if .Values.panda.hostName }}
-  PANDA_SANDBOX_HOST: "{{ .Values.panda.hostName }}"
+  PANDA_HOSTNAME: "{{ .Values.panda.hostName }}"
   {{- end }}
 
   # ActiveMQ
