--- a/helm/panda/charts/server/templates/route.yaml
+++ b/helm/panda/charts/server/templates/route.yaml
@@ -28,7 +28,7 @@ metadata:
       {{- include "server.labels" . | nindent 4 }}
 
 spec:
-  host: http-{{ .Values.hostName }}
+  host: {{ .Values.hostName }}
   to:
     kind: Service
     name: {{ include "server.fullname" . }}
