--- a/helm/panda/charts/server/panda_server_config.json
+++ b/helm/panda/charts/server/panda_server_config.json
@@ -14,8 +14,7 @@
         "pserveralias": "panda-dev-server",
         "pserverhost": "$PANDA_HOSTNAME",
         "pserverport": "443",
-        "pserverhosthttp": "$PANDA_HOSTNAME",
-        "pserverporthttp": "443",
+        "disableHTTP": "True",
         "dbhost": "$PANDA_DB_HOST",
         "dbport": "$PANDA_DB_PORT",
         "dbpasswd": "$PANDA_DB_PASSWORD",
