--- a/secrets/templates/harvester.yaml
+++ b/secrets/templates/harvester.yaml
@@ -15,6 +15,7 @@ stringData:
   PANDA_AUTH_ID_TOKEN: {{ .Values.auth.authIdToken }}
   PANDA_AUTH_VO: {{ .Values.auth.authVO }}
   PANDA_BEHIND_REAL_LB: "1"
+  PANDA_VERIFY_HOST: "off"
   PANDA_URL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/server/panda"
   PANDA_URL_SSL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.sslPort }}/server/panda"
 
