--- a/helm/iam/values/values-lsst.yaml
+++ b/helm/iam/values/values-lsst.yaml
@@ -1,4 +1,10 @@
 main:
+  image:
+      repository: ghcr.io/wguanicedew/iam-login-service
+      pullPolicy: Always
+      # tag: "v1.8.1"
+      tag: "v1.8.1.1"
+
   # PV: For use cases that users are not allowed to create PV,
   # please update class to corresponding storageclass and update create to false.
   persistentvolume:
