--- a/helm/harvester/charts/harvester/templates/statefulset.yaml
+++ b/helm/harvester/charts/harvester/templates/statefulset.yaml
@@ -163,7 +163,7 @@ spec:
               mountPath: /opt/harvester/sandbox
             - name: {{ include "harvester.fullname" . }}-auth
               mountPath: /opt/harvester/etc/auth
-            - name: {{ include "server.fullname" . }}-cric-jsons-volume
+            - name: {{ include "harvester.fullname" . }}-cric-jsons-volume
                mountPath: /var/cric
           envFrom:
             - configMapRef:
@@ -205,7 +205,7 @@ spec:
         - name: {{ include "harvester.fullname" . }}-condor-logs
           persistentVolumeClaim:
             claimName: {{ include "harvester.fullname" . }}-condor-logs
-        - name: {{ include "server.fullname" . }}-cric-jsons-volume
+        - name: {{ include "harvester.fullname" . }}-cric-jsons-volume
           secret:
               secretName: {{ .Values.global.secret }}-cric-jsons
               optional: true
