Preparing for CNPG deployment on production infrastructure

--- a/rubin-panda-db-deploy/overlays/idds/prod/archive/cnpg-panda-idds-database.yaml
+++ b/rubin-panda-db-deploy/overlays/idds/prod/archive/cnpg-panda-idds-database.yaml
@@ -7,7 +7,7 @@ spec:
   backup:
     retentionPolicy: "15d"
     barmanObjectStore:
-      destinationPath: s3://rubin-panda-dev
+      destinationPath: s3://rubin-panda
       endpointURL: https://s3dfrgw.slac.stanford.edu
       s3Credentials:
         accessKeyId:
