--- a/rubin-panda-db-deploy/overlays/panda/dev/cnpg-panda-server-database.yaml
+++ b/rubin-panda-db-deploy/overlays/panda/dev/cnpg-panda-server-database.yaml
@@ -15,7 +15,7 @@ spec:
       secret:
         name: usdf-panda-server-dev-creds
   
-  imageName:  ghcr.io/cloudnative-pg/postgresql:14.4-7
+  imageName: lsstsqre/cloudnative-pg:14
   inheritedMetadata:
     annotations:
       prometheus.io/scrape: 'true' 
