--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -149,6 +149,7 @@ iam:
     name: "iam_db"
     user: "iam"
     password: "FIXME"
+    root_password: "FIXME"
 
   cilogon:
     client_id: "FIXME"
