use different secret for prod

--- a/helm/msgsvc/values/values-lsst-prod.yaml
+++ b/helm/msgsvc/values/values-lsst-prod.yaml
@@ -1,5 +1,8 @@
 # PV: For use cases that users are not allowed to create PV,
 # please update class to corresponding storageclass and update create to false.
+global:
+  secret: "panda-secrets-prod"
+
 activemq:
   persistentvolume:
     create: false
