--- a/helm/bigmon/values/values-lsst-prod.yaml
+++ b/helm/bigmon/values/values-lsst-prod.yaml
@@ -3,6 +3,9 @@
 # # Declare variables to be passed into your templates.
 #
 
+global:
+  secret: "panda-secrets-prod"
+
 main:
   replicaCount: 2
   persistentvolume:
