--- a/helm/idds/values/values-lsst-prod.yaml
+++ b/helm/idds/values/values-lsst-prod.yaml
@@ -2,6 +2,9 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+global:
+  secret: "panda-secrets-prod"
+
 rest:
   replicaCount: 2
   iddsServer: usdf-panda-idds.slac.stanford.edu
