--- a/helm/iam-db/Chart.yaml
+++ b/helm/iam-db/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: iam
+name: iam-db
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -25,7 +25,7 @@ appVersion: "1.16.0"
 
 
 dependencies:
-    - name: mariadb
+    - name: main
       repository: http://localhost:10191
       version: 0.1.0
-      condition: mariadb.enabled
+      condition: iam-db.enabled
