--- a/helm/iam-db/values.yaml
+++ b/helm/iam-db/values.yaml
@@ -4,7 +4,17 @@
 
 global:
   secret: "panda-secrets"
+  sub_secret_name: "iam-db"
 
-mariadb:
+main:
   enabled: true
+
+  image:
+    # repository: ghcr.io/wguanicedew/panda-k8s-mariadb
+    # tag: "0.0.5"
+    repository: ghcr.io/wguanicedew/panda-k8s-pandawms-mariadb
+    tag: "0.1.5"
+
+  database:
+    name: "test-db"
 
