--- a/helm/iam-db/values/values-sphenix.yaml
+++ b/helm/iam-db/values/values-sphenix.yaml
@@ -1,4 +1,6 @@
-mariadb:
+main:
+  # PV: For use cases that users are not allowed to create PV,
+  # please update class to corresponding storageclass and update create to false.
   persistentvolume:
     class: nas
     create: false
