--- a/helm/mariadb/iam-db/charts/main/templates/database.yaml
+++ b/helm/mariadb/iam-db/charts/main/templates/database.yaml
@@ -4,6 +4,6 @@ metadata:
   name: {{ .Values.database.name }}
 spec:
   mariaDbRef:
-    name: {{ include "mariadb.fullname" . }}
+    name: {{ include "iam-db.fullname" . }}
   characterSet: utf8
   collate: utf8_general_ci
